<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    tools:context=".Activities.MyAccountActivity">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/settings"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/secondary_dark"
        android:paddingVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/settings_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/log_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:paddingVertical="5dp">

        <Button
            android:id="@+id/change_email_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_e_mail"
            android:textStyle="bold"
            android:background="@drawable/settings_button_bg"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/change_username_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_username"
            android:textStyle="bold"
            android:background="@drawable/settings_button_bg"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:background="@drawable/settings_button_bg"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/change_language_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/language"
            android:textStyle="bold"
            android:background="@drawable/settings_button_bg"
            android:layout_marginBottom="10dp"/>

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:text="@string/theme"-->
<!--            android:background="@drawable/settings_button_bg"/>-->
<!--            android:layout_marginBottom="10dp"-->

        <Button
            android:id="@+id/show_about_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/about"
            android:textStyle="bold"
            android:background="@drawable/settings_button_bg"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:background="@drawable/log_out_button_bg"
        android:onClick="logOut"/>

</androidx.constraintlayout.widget.ConstraintLayout>