<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/authorization_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/secondary_dark" />

    <LinearLayout
        android:id="@+id/registration_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor,RtlSymmetry"
            android:hint="@string/username"
            android:background="@drawable/input_bg"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_dark"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor"
            android:hint="@string/email"
            android:background="@drawable/input_bg"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_dark"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            android:hint="@string/password"
            android:background="@drawable/input_bg"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_dark"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            android:hint="@string/confirm_password"
            android:background="@drawable/input_bg"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_dark"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingHorizontal="60dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/btnGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/darker_orange"
                android:clickable="true"
                android:focusable="true"
                android:onClick="showLoginLayout"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>